// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalPageAside /> should not render correctly with votableStep 1`] = `
<ProposalPageAside__Aside
  hasVoteBar={true}
  id="ProposalPageAside"
  isAnalysing={false}
  isFixedToBottom={false}
  isFixedToTop={false}
  isMovingUp={false}
  isTipsmeee={false}
>
  <div>
    <Relay(ProposalPageMetadata)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "canDisplayBallot": false,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "isUsingAnySocialNetworks": true,
            "step": Object {
              "state": "CLOSED",
            },
            "usingCategories": true,
            "usingThemes": false,
            "usingTipsmeee": false,
          },
          "isProposalUsingAnySocialNetworks": true,
          "tipsmeeeId": null,
          "viewerDidAuthor": true,
        }
      }
      showCategories={true}
      showDistricts={false}
      showNullEstimation={false}
      showThemes={false}
    />
    <Relay(ProposalPageAdvancement)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "canDisplayBallot": false,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "isUsingAnySocialNetworks": true,
            "step": Object {
              "state": "CLOSED",
            },
            "usingCategories": true,
            "usingThemes": false,
            "usingTipsmeee": false,
          },
          "isProposalUsingAnySocialNetworks": true,
          "tipsmeeeId": null,
          "viewerDidAuthor": true,
        }
      }
    />
    <ProposalSocialNetworkLinks
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "canDisplayBallot": false,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "isUsingAnySocialNetworks": true,
            "step": Object {
              "state": "CLOSED",
            },
            "usingCategories": true,
            "usingThemes": false,
            "usingTipsmeee": false,
          },
          "isProposalUsingAnySocialNetworks": true,
          "tipsmeeeId": null,
          "viewerDidAuthor": true,
        }
      }
    />
  </div>
</ProposalPageAside__Aside>
`;

exports[`<ProposalPageAside /> should render correctly 1`] = `
<ProposalPageAside__Aside
  hasVoteBar={false}
  id="ProposalPageAside"
  isAnalysing={false}
  isFixedToBottom={false}
  isFixedToTop={false}
  isMovingUp={false}
  isTipsmeee={false}
>
  <div>
    <Relay(ProposalPageMetadata)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "canDisplayBallot": true,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "isUsingAnySocialNetworks": true,
            "step": Object {
              "state": "CLOSED",
            },
            "usingCategories": true,
            "usingThemes": false,
            "usingTipsmeee": false,
          },
          "isProposalUsingAnySocialNetworks": true,
          "tipsmeeeId": null,
          "viewerDidAuthor": true,
        }
      }
      showCategories={true}
      showDistricts={false}
      showNullEstimation={false}
      showThemes={false}
    />
    <Relay(ProposalPageAdvancement)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "canDisplayBallot": true,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "isUsingAnySocialNetworks": true,
            "step": Object {
              "state": "CLOSED",
            },
            "usingCategories": true,
            "usingThemes": false,
            "usingTipsmeee": false,
          },
          "isProposalUsingAnySocialNetworks": true,
          "tipsmeeeId": null,
          "viewerDidAuthor": true,
        }
      }
    />
    <Relay(ProposalPageVoteThreshold)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "canDisplayBallot": true,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "isUsingAnySocialNetworks": true,
            "step": Object {
              "state": "CLOSED",
            },
            "usingCategories": true,
            "usingThemes": false,
            "usingTipsmeee": false,
          },
          "isProposalUsingAnySocialNetworks": true,
          "tipsmeeeId": null,
          "viewerDidAuthor": true,
        }
      }
      showPoints={true}
      step={
        Object {
          "$fragmentRefs": null,
          "canDisplayBallot": true,
          "voteType": "SIMPLE",
          "votesRanking": true,
        }
      }
    />
    <ProposalSocialNetworkLinks
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "canDisplayBallot": true,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "isUsingAnySocialNetworks": true,
            "step": Object {
              "state": "CLOSED",
            },
            "usingCategories": true,
            "usingThemes": false,
            "usingTipsmeee": false,
          },
          "isProposalUsingAnySocialNetworks": true,
          "tipsmeeeId": null,
          "viewerDidAuthor": true,
        }
      }
    />
  </div>
</ProposalPageAside__Aside>
`;

exports[`<ProposalPageAside /> should render correctly with analysis 1`] = `
<ProposalPageAside__Aside
  hasVoteBar={true}
  id="ProposalPageAside"
  isAnalysing={true}
  isFixedToBottom={false}
  isFixedToTop={false}
  isMovingUp={false}
  isTipsmeee={false}
>
  <div>
    <Relay(ProposalPageMetadata)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "canDisplayBallot": true,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "isUsingAnySocialNetworks": true,
            "step": Object {
              "state": "CLOSED",
            },
            "usingCategories": true,
            "usingThemes": false,
            "usingTipsmeee": false,
          },
          "isProposalUsingAnySocialNetworks": true,
          "tipsmeeeId": null,
          "viewerDidAuthor": true,
        }
      }
      showCategories={true}
      showDistricts={false}
      showNullEstimation={false}
      showThemes={false}
    />
    <Relay(ProposalPageAdvancement)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "canDisplayBallot": true,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "isUsingAnySocialNetworks": true,
            "step": Object {
              "state": "CLOSED",
            },
            "usingCategories": true,
            "usingThemes": false,
            "usingTipsmeee": false,
          },
          "isProposalUsingAnySocialNetworks": true,
          "tipsmeeeId": null,
          "viewerDidAuthor": true,
        }
      }
    />
    <Relay(ProposalPageVoteThreshold)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "canDisplayBallot": true,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "isUsingAnySocialNetworks": true,
            "step": Object {
              "state": "CLOSED",
            },
            "usingCategories": true,
            "usingThemes": false,
            "usingTipsmeee": false,
          },
          "isProposalUsingAnySocialNetworks": true,
          "tipsmeeeId": null,
          "viewerDidAuthor": true,
        }
      }
      showPoints={true}
      step={
        Object {
          "$fragmentRefs": null,
          "canDisplayBallot": true,
          "voteType": "SIMPLE",
          "votesRanking": true,
        }
      }
    />
    <ProposalSocialNetworkLinks
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "canDisplayBallot": true,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "isUsingAnySocialNetworks": true,
            "step": Object {
              "state": "CLOSED",
            },
            "usingCategories": true,
            "usingThemes": false,
            "usingTipsmeee": false,
          },
          "isProposalUsingAnySocialNetworks": true,
          "tipsmeeeId": null,
          "viewerDidAuthor": true,
        }
      }
    />
  </div>
</ProposalPageAside__Aside>
`;

exports[`<ProposalPageAside /> should render correctly with tipsmeee 1`] = `
<ProposalPageAside__Aside
  hasVoteBar={true}
  id="ProposalPageAside"
  isAnalysing={true}
  isFixedToBottom={false}
  isFixedToTop={false}
  isMovingUp={false}
  isTipsmeee={true}
>
  <div>
    <Relay(ProposalPageMetadata)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "canDisplayBallot": true,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "isUsingAnySocialNetworks": true,
            "step": Object {
              "state": "OPENED",
            },
            "usingCategories": true,
            "usingThemes": true,
            "usingTipsmeee": true,
          },
          "isProposalUsingAnySocialNetworks": true,
          "tipsmeeeId": "aTipsmeCode",
          "viewerDidAuthor": true,
        }
      }
      showCategories={true}
      showDistricts={false}
      showNullEstimation={false}
      showThemes={false}
    />
    <Relay(ProposalPageAdvancement)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "canDisplayBallot": true,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "isUsingAnySocialNetworks": true,
            "step": Object {
              "state": "OPENED",
            },
            "usingCategories": true,
            "usingThemes": true,
            "usingTipsmeee": true,
          },
          "isProposalUsingAnySocialNetworks": true,
          "tipsmeeeId": "aTipsmeCode",
          "viewerDidAuthor": true,
        }
      }
    />
    <ProposalTipsMeeeAside
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "canDisplayBallot": true,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "isUsingAnySocialNetworks": true,
            "step": Object {
              "state": "OPENED",
            },
            "usingCategories": true,
            "usingThemes": true,
            "usingTipsmeee": true,
          },
          "isProposalUsingAnySocialNetworks": true,
          "tipsmeeeId": "aTipsmeCode",
          "viewerDidAuthor": true,
        }
      }
    />
    <Relay(ProposalPageVoteThreshold)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "canDisplayBallot": true,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "isUsingAnySocialNetworks": true,
            "step": Object {
              "state": "OPENED",
            },
            "usingCategories": true,
            "usingThemes": true,
            "usingTipsmeee": true,
          },
          "isProposalUsingAnySocialNetworks": true,
          "tipsmeeeId": "aTipsmeCode",
          "viewerDidAuthor": true,
        }
      }
      showPoints={true}
      step={
        Object {
          "$fragmentRefs": null,
          "canDisplayBallot": true,
          "voteType": "SIMPLE",
          "votesRanking": true,
        }
      }
    />
    <ProposalSocialNetworkLinks
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "canDisplayBallot": true,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "isUsingAnySocialNetworks": true,
            "step": Object {
              "state": "OPENED",
            },
            "usingCategories": true,
            "usingThemes": true,
            "usingTipsmeee": true,
          },
          "isProposalUsingAnySocialNetworks": true,
          "tipsmeeeId": "aTipsmeCode",
          "viewerDidAuthor": true,
        }
      }
    />
  </div>
</ProposalPageAside__Aside>
`;

exports[`<ProposalPageAside /> should render correctly with votableStep 1`] = `
<ProposalPageAside__Aside
  hasVoteBar={false}
  id="ProposalPageAside"
  isAnalysing={false}
  isFixedToBottom={false}
  isFixedToTop={false}
  isMovingUp={false}
  isTipsmeee={false}
>
  <div>
    <Relay(ProposalPageMetadata)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "canDisplayBallot": true,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "isUsingAnySocialNetworks": true,
            "step": Object {
              "state": "CLOSED",
            },
            "usingCategories": true,
            "usingThemes": false,
            "usingTipsmeee": false,
          },
          "isProposalUsingAnySocialNetworks": true,
          "tipsmeeeId": null,
          "viewerDidAuthor": true,
        }
      }
      showCategories={true}
      showDistricts={false}
      showNullEstimation={false}
      showThemes={false}
    />
    <Relay(ProposalPageAdvancement)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "canDisplayBallot": true,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "isUsingAnySocialNetworks": true,
            "step": Object {
              "state": "CLOSED",
            },
            "usingCategories": true,
            "usingThemes": false,
            "usingTipsmeee": false,
          },
          "isProposalUsingAnySocialNetworks": true,
          "tipsmeeeId": null,
          "viewerDidAuthor": true,
        }
      }
    />
    <Relay(ProposalPageVoteThreshold)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "canDisplayBallot": true,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "isUsingAnySocialNetworks": true,
            "step": Object {
              "state": "CLOSED",
            },
            "usingCategories": true,
            "usingThemes": false,
            "usingTipsmeee": false,
          },
          "isProposalUsingAnySocialNetworks": true,
          "tipsmeeeId": null,
          "viewerDidAuthor": true,
        }
      }
      showPoints={true}
      step={
        Object {
          "$fragmentRefs": null,
          "canDisplayBallot": true,
          "voteType": "SIMPLE",
          "votesRanking": true,
        }
      }
    />
    <ProposalSocialNetworkLinks
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "canDisplayBallot": true,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "isUsingAnySocialNetworks": true,
            "step": Object {
              "state": "CLOSED",
            },
            "usingCategories": true,
            "usingThemes": false,
            "usingTipsmeee": false,
          },
          "isProposalUsingAnySocialNetworks": true,
          "tipsmeeeId": null,
          "viewerDidAuthor": true,
        }
      }
    />
  </div>
</ProposalPageAside__Aside>
`;
